--- a/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
@@ -26,14 +26,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ImageView
+                    <ImageView android:id="@+id/imgAppClienteCadastro"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:src="@mipmap/ic_launcher" />
 
-                    <TextView
-                        android:id="@+id/txtViewCdastrp"
+                    <TextView android:id="@+id/txtViewCadastro"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
@@ -58,8 +57,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txtCadastroNovoUsuario"
+                    <TextView android:id="@+id/txtCadastroNovoUsuario"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
@@ -68,8 +66,7 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/editNomeCompleto"
+                    <EditText android:id="@+id/editNomeCompleto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -80,8 +77,7 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/editCadastroEmail"
+                    <EditText android:id="@+id/editCadastroEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -93,8 +89,7 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/editSenha"
+                    <EditText android:id="@+id/editSenha"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -106,8 +101,7 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/editConfirmarSenha"
+                    <EditText android:id="@+id/editConfirmarSenha"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -134,7 +128,7 @@
                     android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnConfirmar"
+                        android:id="@+id/btnConfirmarCadastro"
                         style="@style/CustomizeButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
