--- a/Java/AppClientes/app/src/main/res/layout/activity_login.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_login.xml
@@ -97,6 +97,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtVerifiqueDados"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
