--- a/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppClientes/app/src/main/res/layout/activity_cadastro.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ModeloAzulFragment">
+    tools:context=".view.CadastroActivity">
 
     <ScrollView
         android:layout_width="match_parent"
