--- a/Java/AppClientes/app/src/main/res/menu/menu.xml
+++ b/Java/AppClientes/app/src/main/res/menu/menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.MainActivity">
     <item
         android:id="@+id/action_perfil"
         android:orderInCategory="100"
@@ -11,7 +13,6 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:onClick="exitApp"
         app:showAsAction="never" />
 
 </menu>
