--- a/Java/AppListaDeCompras/app/src/main/res/layout/activity_login.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/activity_login.xml
@@ -131,7 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                android:text="@string/btn_cadastre_se" />
+                android:text="@string/btn_cadastre_se"
+                android:onClick="btnCadastrarUsuario"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
