--- a/Java/AppListaDeCompras/app/src/main/res/layout/activity_splash.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/activity_splash.xml
@@ -29,12 +29,14 @@
         android:id="@+id/imgAppCliente"
         android:layout_width="240dp"
         android:layout_height="240dp"
+        android:layout_marginTop="204dp"
         android:layout_marginBottom="204dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toTopOf="@+id/txtVersao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
 
     <TextView
