--- a/Java/AppListaDeCompras/app/src/main/res/layout/activity_cadastro.xml
+++ b/Java/AppListaDeCompras/app/src/main/res/layout/activity_cadastro.xml
@@ -1,17 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.CadastroActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="16dp"
             android:orientation="vertical">
 
@@ -66,14 +68,63 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
-                    <EditText android:id="@+id/editNomeCompleto"
+                    <EditText android:id="@+id/editNome"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:gravity="left"
-                        android:hint="Nome Completo"
+                        android:hint="Nome"
+                        android:textSize="18sp"
+                        android:inputType="textPersonName"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editSobrenome"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="Sobrenome"
+                        android:textSize="18sp"
+                        android:inputType="textPersonName"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editEndereco"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="Endereço"
+                        android:inputType="textAutoComplete"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editComplemento"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:hint="Complemento"
+                        android:textSize="18sp"
+                        android:inputType="textAutoComplete"
+                        android:textStyle="bold" />
+
+                    <EditText android:id="@+id/editCpf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="left"
+                        android:inputType="number"
+                        android:hint="CPF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -97,7 +148,7 @@
                         android:layout_marginEnd="8dp"
                         android:gravity="left"
                         android:hint="senha"
-                        android:inputType="textWebPassword"
+                        android:inputType="textPassword"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -110,7 +161,7 @@
                         android:layout_marginBottom="8dp"
                         android:gravity="left"
                         android:hint="confirmar senha"
-                        android:inputType="textWebPassword"
+                        android:inputType="textPassword"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -119,7 +170,8 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp">
+                android:layout_margin="16dp"
+                android:layout_marginTop="48dp">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
@@ -131,7 +183,7 @@
                         android:id="@+id/btnConfirmarCadastro"
                         style="@style/CustomizeButton"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:text="Confirmar Cadastro"
                         android:onClick="btnConfirmarCadastro"/>
 
@@ -149,4 +201,4 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </ScrollView>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
